--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codesession-cli",
-  "version": "1.5.0",
+  "version": "1.7.0",
   "description": "Track AI agent & coding session costs — files, commits, tokens. Works with OpenClaw, Claude Code, and any AI agent. Includes programmatic API with budget enforcement.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,19 +10,22 @@
   },
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/index.js"
     },
     "./agents": {
+      "types": "./dist/agents.d.ts",
       "import": "./dist/agents.js",
-      "require": "./dist/agents.js",
-      "types": "./dist/agents.d.ts"
+      "require": "./dist/agents.js"
     }
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npx vite build --config dashboard/vite.config.ts",
+    "build:cli": "tsc",
+    "build:dashboard": "npx vite build --config dashboard/vite.config.ts",
     "dev": "tsx src/index.ts",
+    "dev:dashboard": "npx vite --config dashboard/vite.config.ts",
     "start": "node dist/index.js",
     "prepare": "npm run build"
   },
@@ -45,12 +48,13 @@
   "author": "Brian Mwirigi",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^4.1.2",
-    "commander": "^11.1.0",
     "better-sqlite3": "^9.2.2",
-    "cli-table3": "^0.6.3",
-    "date-fns": "^3.0.6",
+    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
+    "cli-table3": "^0.6.3",
+    "commander": "^11.1.0",
+    "date-fns": "^3.0.6",
+    "express": "^5.2.1",
     "simple-git": "^3.22.0"
   },
   "files": [
@@ -61,9 +65,17 @@
   ],
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
+    "@types/express": "^5.0.6",
     "@types/node": "^20.10.6",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.3",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "recharts": "^3.7.0",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^7.3.1"
   },
   "engines": {
     "node": ">=16.0.0"
