--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codesession-cli",
   "version": "2.0.0",
   "description": "Track AI agent & coding session costs — files, commits, tokens. Works with OpenClaw, Claude Code, and any AI agent. Includes programmatic API with budget enforcement.",
+  "funding": "https://github.com/sponsors/brian-mwirigi",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
