Improve SEO: add keyword variations and agent names everywhere
- package.json: expanded to 43 keywords, enriched description with name variations
- README: updated tagline, added keywords section at footer
- plugin.json: 27 keywords covering all agent platforms
- marketplace.json: expanded keywords and tags
- SKILL.md: updated description with name variations and v2.2.0
- Name variations: codesession, codesession-cli, code session, code-session
- Agent coverage: Claude Code, OpenClaw, Codex, GPT, Cursor, Windsurf, Cline

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "codesession-cli",
   "version": "2.2.0",
-  "description": "Track AI agent & coding session costs — files, commits, tokens. Works with OpenClaw, Claude Code, and any AI agent. Includes programmatic API with budget enforcement.",
+  "description": "codesession — Track AI agent costs, tokens, files & commits. Session tracker for Claude Code, OpenClaw, Codex, GPT, Cursor, Windsurf, Cline & any AI agent. Budget enforcement, auto-pricing, MCP server, web dashboard. Also known as codesession-cli, code session, code-session.",
   "funding": "https://github.com/sponsors/brian-mwirigi",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -34,20 +34,49 @@
     "screenshots:setup": "bash scripts/setup-demo-data.sh || scripts\\setup-demo-data.bat"
   },
   "keywords": [
+    "codesession",
+    "codesession-cli",
+    "code-session",
+    "code session",
     "ai",
+    "ai-agent",
+    "ai-cost",
+    "ai-cost-tracker",
+    "ai-session-tracker",
+    "session-tracker",
+    "cost-tracking",
+    "token-tracking",
+    "token-counter",
+    "token-usage",
     "coding",
     "session",
     "tracker",
-    "ai-agent",
+    "budget",
+    "budget-enforcement",
+    "observability",
     "openclaw",
     "claude-code",
-    "cost-tracking",
-    "token-tracking",
+    "claude",
+    "anthropic",
+    "openai",
+    "codex",
+    "gpt",
+    "gemini",
+    "deepseek",
+    "cursor",
+    "windsurf",
+    "cline",
+    "mcp",
+    "mcp-server",
+    "model-context-protocol",
     "git",
     "cli",
     "agents",
-    "budget",
-    "observability"
+    "agent-framework",
+    "dashboard",
+    "analytics",
+    "devtools",
+    "developer-tools"
   ],
   "author": "Brian Mwirigi",
   "license": "MIT",
